# neomake

./: #.html  .hoox.yaml  .neomake.yaml  .rusty-hook.toml  404.html  Cargo.toml  README.md  flake.nix  index.html  print.html  reference.html  searchindex.js  searchindex.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  wiki.yml
adrs/: 1-usage-of-adrs.html  2-usage-of-keywords.html  3-versioning.html  4-experimental-flag.html  5-feature-flags.html
code/app/cli/: .neomake.yaml  Cargo.toml
code/app/cli/src/: args.rs  config.rs  error.rs  main.rs  model.rs  output.rs
code/apps/cli/: Cargo.toml
code/apps/cli/src/: args.rs  error.rs  main.rs
code/libs/error/: Cargo.toml
docs/: README.md
docs/wiki/: book.toml
docs/wiki/src/adrs/: 3-versioning.md  4-experimental-flag.md  5-feature-flags.md
res/templates/: max.neomake.yaml  max.yaml  min.yaml  python.neomake.yaml  python.yaml
src/: args.rs  compiler.rs  config.rs  error.rs  exec.rs  main.rs  model.rs  output.rs  plan.rs  reference.rs  workflow.rs
test/: .neomake.yaml
