[package]
name = "neomake"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2018"
license = "MIT"
description = "Yet another task runner as make alternative, inspired by GitLab pipelines."
homepage = "https://replicadse.github.io/neomake"
repository = "https://github.com/replicadse/neomake"
keywords = ["make", "cli"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []
format_json = []
format_ron = ["dep:ron"]
format_toml = ["dep:toml"]

[dependencies]
async-trait = "0.1.0"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.1.8"
clap_complete = "4.1.4"
clap_mangen = "0.2.9"
clap-markdown = "0.1.3"
serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.0"
bytes = "1.1.0"
mime = "0.3.0"
handlebars = "4.3"
interactive_process = "0.1.3"
crossterm = "0.26.1"
thiserror = "1.0.0"
itertools = "0.11.0"
threadpool = "1.8.0"
schemars = "0.8.12"
fancy-regex = "0.11.0"

toml = { version = "0.7.6", optional = true }
ron = { version = "0.8.0", optional = true }

[dev-dependencies]
rusty-hook = "0.11.2"
