[package]
name = "neomake"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "Yet another task runner."
homepage = "https://neomake.sh"
repository = "https://github.com/replicadse/neomake"
keywords = ["make", "cli", "task", "runner"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []
"format+json" = []
"format+ron" = ["dep:ron"]
"format+toml" = ["dep:toml"]

[dependencies]
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.4.5"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.103"
toml = { version = "0.7.6", optional = true }
ron = { version = "0.8.0", optional = true }
bytes = "1.4.0"
mime = "0.3.17"
handlebars = "4.3.7"
crossterm = "0.26.1"
itertools = "0.11.0"
threadpool = "1.8.1"
schemars = "0.8.12"
fancy-regex = "0.11.0"
anyhow = "1.0.72"
thiserror = "1.0.44"

[dev-dependencies]
rusty-hook = "0.11.2"
