[package]
name = "neomake"
version = "0.1.0"
authors = ["alexander weber <aw@voidpointergroup.com>"]
edition = "2018"
description = "Yet another task runner as make alternative, inspired by GitLab pipelines."
license = "MIT"

[dependencies]
ureq = "^2.4"
clap = "^3.2"
tokio = { version = "^1.23", features = ["full"] }
handlebars = "^4.3"
chrono = "0.4.19"
futures = "0.3.21"
base64 = "0.13.1"
uuid = { version = "^1.1", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.8.24"
serde_json = "^1.0"
