[package]
name = "neomake"
version = "0.1.3"
authors = ["alexander weber <aw@voidpointergroup.com>"]
edition = "2018"
description = "Yet another task runner as make alternative, inspired by GitLab pipelines."
license = "MIT"

[dependencies]
clap = "^3.2"
tokio = { version = "^1.23", features = ["full"] }
handlebars = "^4.3"
futures = "0.3.21"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.8.24"
serde_json = "^1.0"
interactive_process = "0.1.2"
