[package]
name = "neomake"
version = "0.0.0"
authors = ["alexander weber <aw@voidpointergroup.com>"]
edition = "2018"
rust-version = "1.57.0"
description = "Yet another task runner as make alternative, inspired by GitLab pipelines."
license = "MIT"
readme = "../../../README.md"
homepage = "https://github.com/voidpointergroup/neomake"
repository = "https://github.com/voidpointergroup/neomake"

[dependencies]
clap = "^3.2"
tokio = { version = "^1.23", features = ["full"] }
handlebars = "^4.3"
futures = "0.3.21"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.8.24"
serde_json = "^1.0"
interactive_process = "0.1.2"
crossterm = "0.25.0"
thiserror = "^1.0"
itertools = "0.10.5"
